# Remindo

./: .dockerignore  .env.example  Dockerfile  README.md  baby  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  db.py  scheduler.py
app/models/: user.py
app/schemas/: user.py
app/services/: email.py  task_service.py
app/static/: index.html
migrations/: env.py
migrations/versions/: 5835b7032bd1_first_migration.py  a77afab6ec88_add_priority.py
